Complete Release 0 and 1

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,6 +15,9 @@
       <nav class="clearfix mar-b-1">
         <ul class="no-bullets no-margin no-padding right">
           <li class="pipe-separate t-light-green left"><a href="/">home</a></li>
+          <li class="pipe-separate t-light-green left"><a href="/users/new">Create Account</a></li>
+          <li class="pipe-separate t-light-green left"><a href="/sessions/new">Sign in</a></li>
+          <li class="pipe-separate t-light-green left"><a href="/entries">Board</a></li>
         </ul>
       </nav>
 
