--- a/app/views/entries/show.erb
+++ b/app/views/entries/show.erb
@@ -1,8 +1,11 @@
 <h1><%= @entry.title %></h1>
 
-<span class="entry-date block font-3-4 c-lt-gray"><%= "Written on #{long_form_date(@entry.created_at)}." %></span>
+<span class="entry-date block font-3-4 c-lt-gray"><%= "Written on #{long_form_date(@entry.created_at)}. by #{@entry.user_id}" %></span>
 
 <p><%= @entry.body %></p>
+
+<% current_user %>
+<% if entry_owned_by_user %>
 
 <ul class="no-bullets no-padding mar-t-2">
   <li class="pipe-separate left">
@@ -16,3 +19,4 @@
     </form>
   </li>
 </ul>
+<% end %>
