--- a/app/views/entries/new.erb
+++ b/app/views/entries/new.erb
@@ -8,6 +8,8 @@
     <% end %>
   </ul>
 <% end %>
+
+<!-- need to be logged in to make posts -->
 <% if logged_in? %>
 <% current_user %>
 <form method="post" action="/entries">
