--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,6 +15,7 @@
       <nav class="clearfix mar-b-1">
         <ul class="no-bullets no-margin no-padding right">
           <% if logged_in? %>
+          <!-- see user posts with link below -->
           <li class="pipe-separate t-light-green left">Hello, <strong><a href="/users/show"><%= current_user.username %></strong></a></li>
           <li class="pipe-separate t-light-green left"><a href="/">Home</a></li>
           <li class="pipe-separate t-light-green left"><a href="/sessions/logout">Log Out</a></li>
