--- a/app/views/entries/show.erb
+++ b/app/views/entries/show.erb
@@ -6,7 +6,7 @@
 
 <% current_user %>
 <% if entry_owned_by_user %>
-
+<!-- only posts owned by user can be edited or deleted by user -->
 <ul class="no-bullets no-padding mar-t-2">
   <li class="pipe-separate left">
     <a href="/entries/<%= @entry.id %>/edit" class="c-white">edit</a>
