--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,6 +14,8 @@
     <div class="max-w-700 center wrap-float">
       <nav class="clearfix mar-b-1">
         <ul class="no-bullets no-margin no-padding right">
+          <li class="pipe-separate t-light-green left"><a href="/users/new">register</a></li>
+          <li class="pipe-separate t-light-green left"><a href="/users/login">login</a></li>
           <li class="pipe-separate t-light-green left"><a href="/">home</a></li>
         </ul>
       </nav>
