--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,7 +18,7 @@
           <!-- see user posts with link below -->
           <li class="pipe-separate t-light-green left">Hello, <strong><a href="/users/show"><%= current_user.username %></strong></a></li>
           <li class="pipe-separate t-light-green left"><a href="/">Home</a></li>
-          <li class="pipe-separate t-light-green left"><a href="/sessions/logout">Log Out</a></li>
+          <li class="pipe-separate t-light-green left"><a href="/logout">Log Out</a></li>
           <% else %>
 
           <li class="pipe-separate t-light-green left"><a href="/">Home</a></li>
