--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,10 +1,10 @@
 <div>
   <form method="post">
     <label for="email">Email:</label>
-    <input type="text" id="email" name="user[email]">
+    <input type="text" id="email" name="email">
     <br>
     <label for="password">Password:</label>
-    <input type="text" id="password" name="user[password]">
+    <input type="text" id="password" name="password">
     <br>
     <input type="submit" value="Register">
   </form>
