--- a/app/views/entries/show.erb
+++ b/app/views/entries/show.erb
@@ -1,9 +1,9 @@
 <h1><%= @entry.title %></h1>
 
-<span class="entry-date block font-3-4 c-lt-gray"><%= "Written on #{long_form_date(@entry.created_at)}." %></span>
+<span class="entry-date block font-3-4 c-lt-gray"><%= "Written on #{long_form_date(@entry.created_at)} by #{@entry.user.username}" %></span>
 
 <p><%= @entry.body %></p>
-<% if session_user != nil %>
+<% if session_user != nil && session_user.id == @entry.user_id %>
   <ul class="no-bullets no-padding mar-t-2">
     <li class="pipe-separate left">
       <a href="/entries/<%= @entry.id %>/edit" class="c-white">edit</a>
