--- a/app/views/entries/new.erb
+++ b/app/views/entries/new.erb
@@ -15,6 +15,7 @@
 
   <label for="body-textarea" class="block mar-b-1">Body:</label>
   <textarea id="body-textarea" name="entry[body]" tabindex="2" class="block w-100 h-10 no-resize no-outline no-border no-resize pad-1 mar-b-2"><%= @entry.try(:body) %></textarea>
+  <input type="hidden" name="entry[user_id]" value="<%= session[:user_id]%>">
 
   <input type="submit" value="Publish" tabindex="3" class="block button w-100 mar-t-4 mar-b-3 pad-2 round-1 text-c center no-border no-outline">
 </form>
