add links to profile entry titles and user show titles

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -7,6 +7,6 @@
 
 <form method="post" action='/sessions'>
   <input type='text' name="user[email]" placeholder="Email">
-  <input type='text' name="user[password]" placeholder="Password">
+  <input type='password' name="user[password]" placeholder="Password">
   <input type='submit' value='Login'>
 </form>
