--- a/app/views/entries/index.erb
+++ b/app/views/entries/index.erb
@@ -12,7 +12,7 @@
     <% @entries.each do |entry| %>
       <li class="entry-item pad-b-4">
         <a href="/entries/<%= entry.id %>" class="entry-title font-2 pad-b-1-4 c-white"><%= entry.title %></a>
-        <a href="/users/<%= @user_id %>/entries" class="entry-stub">Created by: <%= entry.user.username%></a>
+        <a href="/users/<%= entry.user.id %>/entries" class="entry-stub">Created by: <%= entry.user.username%></a>
         <span class="entry-date block font-3-4 c-lt-gray"><%= "Written on #{long_form_date(entry.created_at)}." %></span>
         <p class="entry-stub"><%= stub(entry.body) %></p>
       </li>
