--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -3,6 +3,7 @@
 
 <ul>
     <% @user.entries.each do |entry| %>
-      <li><%= entry.title %></li>
+      <li><a href="/entries/<%= entry.id %>" class="entry-title font-2 pad-b-1-4 c-white"><%= entry.title %></a></li>
     <% end %>
   </ul>
+
